--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <!-- Préchargement des ressources pour de meilleures performances -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preload" href="%PUBLIC_URL%/logo192.png" as="image" type="image/png">
+  <link rel="preload" href="%PUBLIC_URL%/logo192.png" as="image" type="image/webp">
   <link rel="stylesheet" href="%PUBLIC_URL%/styles.css">
   
   <!-- Polices Google -->
