Ajustement et correction bugs

--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Informations de base -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adam's Portfolio</title>
+  <title>Adam's Portfolio - Développeur Web</title>
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Portfolio de développeur web spécialisé en JavaScript, React, Node.js, et intégration d'API.">
-  <meta name="keywords" content="Développeur Web, React, Node.js, JavaScript, API, Adam, Portfolio">
+  <meta name="description" content="Portfolio d'Adam, développeur web spécialisé en JavaScript, ReactJS, Node.js, et création d'API RESTful. Découvrez mes projets, compétences et expériences.">
+  <meta name="keywords" content="Développeur Web, JavaScript, ReactJS, Node.js, API RESTful, Portfolio, Adam">
   <meta name="author" content="Adam">
-  <link rel="canonical" href="http://localhost:3000/">
+  <link rel="canonical" href="https://didamsoo.github.io/Portfolio/">
 
   <!-- Préchargement des ressources pour de meilleures performances -->
   <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preload" href="%PUBLIC_URL%/logo192.png" as="image" type="image/webp">
-  <link rel="stylesheet" href="%PUBLIC_URL%/styles.css">
   
   <!-- Polices Google -->
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Instrument+Sans:wght@400;600;700&display=swap" as="style">
-  <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
   <!-- Favicon -->
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png">
-  
+
   <!-- Manifest pour les applications web mobiles -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   
   <meta name="theme-color" content="#000000">
 
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:title" content="Adam's Portfolio - Développeur Web">
+  <meta property="og:description" content="Portfolio d'Adam, développeur web spécialisé en JavaScript, ReactJS, Node.js, et création d'API RESTful. Découvrez mes projets, compétences et expériences.">
+  <meta property="og:url" content="https://didamsoo.github.io/Portfolio/">
+  <meta property="og:image" content="https://didamsoo.github.io/Portfolio/adam.webp">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Adam's Portfolio - Développeur Web">
+  <meta name="twitter:description" content="Portfolio d'Adam, développeur web spécialisé en JavaScript, ReactJS, Node.js, et création d'API RESTful. Découvrez mes projets, compétences et expériences.">
+  <meta name="twitter:image" content="https://didamsoo.github.io/Portfolio/adam.webp">
+
+  <!-- Robots.txt -->
+  <meta name="robots" content="index, follow">
+  
   <!-- Accessibilité et compatibilité -->
   <noscript>JavaScript est requis pour exécuter cette application.</noscript>
 </head>
